--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>javaee-api</artifactId>
             <version>8.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
     </dependencies>
 
